// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountSubscriptions renders empty 1`] = `
<AccountSubscriptions>
  <SideEffect(DocumentTitle)
    title="Subscriptions - Sentry"
  >
    <DocumentTitle
      title="Subscriptions - Sentry"
    >
      <div>
        <StyledSettingsPageHeading
          noTitleStyles={false}
          title="Subscriptions"
        >
          <SettingsPageHeading
            className="css-xtfhnp-StyledSettingsPageHeading e1uay4fd4"
            noTitleStyles={false}
            title="Subscriptions"
          >
            <div
              className="css-xtfhnp-StyledSettingsPageHeading e1uay4fd4"
            >
              <TitleAndActions>
                <div
                  className="css-ifzfc5-TitleAndActions e1uay4fd0"
                >
                  <Title
                    styled={false}
                  >
                    <div
                      className="css-u2ls9d-Title e1uay4fd1"
                    >
                      <HeaderTitle>
                        <h4
                          className="css-1bosio6-HeaderTitle eqkydle2"
                        >
                          Subscriptions
                        </h4>
                      </HeaderTitle>
                    </div>
                  </Title>
                </div>
              </TitleAndActions>
            </div>
          </SettingsPageHeading>
        </StyledSettingsPageHeading>
        <TextBlock>
          <div
            className="css-1j3tvli-TextBlock e1x1lar10"
          >
            Sentry is committed to respecting your inbox. Our goal is to provide useful content and resources that make fixing errors less painful. Enjoyable even.
          </div>
        </TextBlock>
        <TextBlock>
          <div
            className="css-1j3tvli-TextBlock e1x1lar10"
          >
            As part of our compliance with the EU’s General Data Protection Regulation (GDPR), starting on 25 May 2018, we’ll only email you according to the marketing categories to which you’ve explicitly opted-in.
          </div>
        </TextBlock>
        <Panel>
          <Component
            className="css-ietoyz-Panel e119nu470"
          >
            <div
              className="css-ietoyz-Panel e119nu470"
            >
              <EmptyMessage>
                <Component
                  className="css-1qddu1g-EmptyMessage-EmptyMessage e1h3yfdx0"
                >
                  <div
                    className="css-1qddu1g-EmptyMessage-EmptyMessage e1h3yfdx0"
                    data-test-id="empty-message"
                  >
                    <Description
                      noMargin={true}
                    >
                      <div
                        className="css-iex7sn-TextBlock-Description e1h3yfdx3"
                      >
                        There's no subscription backend present.
                      </div>
                    </Description>
                  </div>
                </Component>
              </EmptyMessage>
            </div>
          </Component>
        </Panel>
        <TextBlock>
          <div
            className="css-1j3tvli-TextBlock e1x1lar10"
          >
            We’re applying GDPR consent and privacy policies to all Sentry contacts, regardless of location. You’ll be able to manage your subscriptions here and from an Unsubscribe link in the footer of all marketing emails.
          </div>
        </TextBlock>
        <TextBlock>
          <div
            className="css-1j3tvli-TextBlock e1x1lar10"
          >
            Please contact 
            <a
              href="mailto:learn@sentry.io"
            >
              learn@sentry.io
            </a>
             with any questions or suggestions.
          </div>
        </TextBlock>
      </div>
    </DocumentTitle>
  </SideEffect(DocumentTitle)>
</AccountSubscriptions>
`;

exports[`AccountSubscriptions renders list and can toggle 1`] = `
<AccountSubscriptions>
  <SideEffect(DocumentTitle)
    title="Subscriptions - Sentry"
  >
    <DocumentTitle
      title="Subscriptions - Sentry"
    >
      <div>
        <StyledSettingsPageHeading
          noTitleStyles={false}
          title="Subscriptions"
        >
          <SettingsPageHeading
            className="css-xtfhnp-StyledSettingsPageHeading e1uay4fd4"
            noTitleStyles={false}
            title="Subscriptions"
          >
            <div
              className="css-xtfhnp-StyledSettingsPageHeading e1uay4fd4"
            >
              <TitleAndActions>
                <div
                  className="css-ifzfc5-TitleAndActions e1uay4fd0"
                >
                  <Title
                    styled={false}
                  >
                    <div
                      className="css-u2ls9d-Title e1uay4fd1"
                    >
                      <HeaderTitle>
                        <h4
                          className="css-1bosio6-HeaderTitle eqkydle2"
                        >
                          Subscriptions
                        </h4>
                      </HeaderTitle>
                    </div>
                  </Title>
                </div>
              </TitleAndActions>
            </div>
          </SettingsPageHeading>
        </StyledSettingsPageHeading>
        <TextBlock>
          <div
            className="css-1j3tvli-TextBlock e1x1lar10"
          >
            Sentry is committed to respecting your inbox. Our goal is to provide useful content and resources that make fixing errors less painful. Enjoyable even.
          </div>
        </TextBlock>
        <TextBlock>
          <div
            className="css-1j3tvli-TextBlock e1x1lar10"
          >
            As part of our compliance with the EU’s General Data Protection Regulation (GDPR), starting on 25 May 2018, we’ll only email you according to the marketing categories to which you’ve explicitly opted-in.
          </div>
        </TextBlock>
        <Panel>
          <Component
            className="css-ietoyz-Panel e119nu470"
          >
            <div
              className="css-ietoyz-Panel e119nu470"
            >
              <div>
                <PanelHeader>
                  <div
                    className="css-pi486d-PanelHeader en8g1d30"
                  >
                    Subscription
                  </div>
                </PanelHeader>
                <PanelBody
                  flexible={false}
                  withPadding={false}
                >
                  <FlexBox
                    withPadding={false}
                  >
                    <div
                      className="css-1nto0rx-FlexBox e1vnwt6f0"
                    >
                      <PanelItem
                        alignItems="center"
                        key="2"
                        p={2}
                      >
                        <div
                          className="css-wt6qay-PanelItem ej5ox20"
                        >
                          <SubscriptionDetails>
                            <div
                              className="css-f7qdjq-SubscriptionDetails er83abj0"
                            >
                              <SubscriptionName>
                                <div
                                  className="css-dvhern-SubscriptionName er83abj1"
                                >
                                  Product & Feature Updates
                                </div>
                              </SubscriptionName>
                              <Description>
                                <div
                                  className="css-10gzpqv-Description er83abj2"
                                >
                                  Everything you need to know about Sentry features, integrations, partnerships, and launches.
                                </div>
                              </Description>
                              <SubscribedDescription>
                                <div
                                  className="css-tn06kc-Description-SubscribedDescription er83abj3"
                                >
                                  <div>
                                    test@sentry.io
                                     on
                                     
                                    <DateTime
                                      date="2018-01-08T05:14:59.102Z"
                                      seconds={true}
                                      shortDate={true}
                                    >
                                      <time>
                                        01/08/2018
                                      </time>
                                    </DateTime>
                                  </div>
                                </div>
                              </SubscribedDescription>
                            </div>
                          </SubscriptionDetails>
                          <div>
                            <ForwardRef
                              isActive={true}
                              size="lg"
                              toggle={[Function]}
                            >
                              <Switch
                                forwardRef={null}
                                isActive={true}
                                size="lg"
                                toggle={[Function]}
                              >
                                <SwitchButton
                                  aria-checked={true}
                                  data-test-id="switch"
                                  isActive={true}
                                  onClick={[Function]}
                                  role="checkbox"
                                  size="lg"
                                  type="button"
                                >
                                  <button
                                    aria-checked={true}
                                    className="css-1jbgjht-SwitchButton ezmyi9u0"
                                    data-test-id="switch"
                                    onClick={[Function]}
                                    role="checkbox"
                                    size="lg"
                                    type="button"
                                  >
                                    <Toggle
                                      isActive={true}
                                      size="lg"
                                    >
                                      <span
                                        className="css-2c6uwf-Toggle ezmyi9u1"
                                        size="lg"
                                      />
                                    </Toggle>
                                  </button>
                                </SwitchButton>
                              </Switch>
                            </ForwardRef>
                          </div>
                        </div>
                      </PanelItem>
                      <PanelItem
                        alignItems="center"
                        key="1"
                        p={2}
                      >
                        <div
                          className="css-wt6qay-PanelItem ej5ox20"
                        >
                          <SubscriptionDetails>
                            <div
                              className="css-f7qdjq-SubscriptionDetails er83abj0"
                            >
                              <SubscriptionName>
                                <div
                                  className="css-dvhern-SubscriptionName er83abj1"
                                >
                                  Sentry Newsletter
                                </div>
                              </SubscriptionName>
                              <Description>
                                <div
                                  className="css-10gzpqv-Description er83abj2"
                                >
                                  Our monthly update on what's new with Sentry and the community.
                                </div>
                              </Description>
                              <SubscribedDescription>
                                <div
                                  className="css-tn06kc-Description-SubscribedDescription er83abj3"
                                >
                                  Not currently subscribed
                                </div>
                              </SubscribedDescription>
                            </div>
                          </SubscriptionDetails>
                          <div>
                            <ForwardRef
                              isActive={false}
                              size="lg"
                              toggle={[Function]}
                            >
                              <Switch
                                forwardRef={null}
                                isActive={false}
                                size="lg"
                                toggle={[Function]}
                              >
                                <SwitchButton
                                  aria-checked={false}
                                  data-test-id="switch"
                                  isActive={false}
                                  onClick={[Function]}
                                  role="checkbox"
                                  size="lg"
                                  type="button"
                                >
                                  <button
                                    aria-checked={false}
                                    className="css-18mwse8-SwitchButton ezmyi9u0"
                                    data-test-id="switch"
                                    onClick={[Function]}
                                    role="checkbox"
                                    size="lg"
                                    type="button"
                                  >
                                    <Toggle
                                      isActive={false}
                                      size="lg"
                                    >
                                      <span
                                        className="css-1wbwbmn-Toggle ezmyi9u1"
                                        size="lg"
                                      />
                                    </Toggle>
                                  </button>
                                </SwitchButton>
                              </Switch>
                            </ForwardRef>
                          </div>
                        </div>
                      </PanelItem>
                       
                    </div>
                  </FlexBox>
                </PanelBody>
              </div>
            </div>
          </Component>
        </Panel>
        <TextBlock>
          <div
            className="css-1j3tvli-TextBlock e1x1lar10"
          >
            We’re applying GDPR consent and privacy policies to all Sentry contacts, regardless of location. You’ll be able to manage your subscriptions here and from an Unsubscribe link in the footer of all marketing emails.
          </div>
        </TextBlock>
        <TextBlock>
          <div
            className="css-1j3tvli-TextBlock e1x1lar10"
          >
            Please contact 
            <a
              href="mailto:learn@sentry.io"
            >
              learn@sentry.io
            </a>
             with any questions or suggestions.
          </div>
        </TextBlock>
      </div>
    </DocumentTitle>
  </SideEffect(DocumentTitle)>
</AccountSubscriptions>
`;
